# funding-service-pre-award-stores

./: .env.development  .flaskenv  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.md  Procfile  README.md  TODO.md  app.py  assess_static_assets.py  babel.cfg  build.py  hello.py  messages.pot  project.toml  pyproject.toml  pytest.ini  requirements.txt  routes.py  static_assets.py  tasks.py
.github/workflows/: codeql-analysis.yml  copilot_deploy.yml
account_store/: .env.development  app.py  tasks.py
account_store/core/: account.py
account_store/scripts/: remove_duplicate_accounts.py
account_store/tests/: conftest.py  test_accounts.py
application_store/_helpers/: __init__.py  application.py  form.py
application_store/api/: __init__.py
application_store/external_services/: data.py  http_methods.py
application_store/openapi/: api.yml
application_store/scripts/: seed_db_test_data.py  send_application_on_closure.py  send_application_reminder.py
application_store/tests/: conftest.py  helpers.py  test_all_feedbacks.py  test_application_status.py  test_aws.py  test_notification.py  test_queries.py  test_reports.py  test_routes.py  test_seed_db.py
apply/: constants.py  helpers.py
apply/default/: account_routes.py  application_routes.py  content_routes.py  data.py  eligibility_routes.py  error_routes.py  routes.py
apply/forms/: feedback.py  research.py
apply/models/: application.py  application_summary.py  eligibility_questions.py  statuses.py
apply/tests/: conftest.py  test_all_questions.py  test_dashboard.py  test_eligibility_routes.py  test_lru_cache.py  test_routes.py  test_start_page.py  test_tasklist.py  test_user_validation.py
assess/: README.md  blueprint_middleware.py  error_handlers.py  tasks.py
assess/assessments/: activity_trail.py  form_lists_generator.py  form_lists_helper.py  helpers.py  routes.py  status.py
assess/authentication/: validation.py
assess/config/: display_value_mappings.py  themes_mapping.py
assess/flagging/: routes.py
assess/scoring/: helpers.py  routes.py
assess/services/: aws.py  data_services.py
assess/shared/: filters.py  helpers.py  routes.py
assess/tagging/: routes.py
assess/tests/: conftest.py  test_activity_trail.py  test_applicators_response.py  test_aws.py  test_data_operations.py  test_deprecated_theme_mapper.py  test_export.py  test_file_factory.py  test_flag_teams.py  test_full_application.py  test_helpers.py  test_jinja_macros.py  test_lru_cache.py  test_pdf_generator.py  test_round_summaries.py  test_routes.py  test_tags.py  test_validation.py
assess/themes/: deprecated_theme_mapper.py
assessment_store/_helpers/: task_executer_service.py
assessment_store/db/: README.md
assessment_store/openapi/: api.yml
assessment_store/scripts/: README.md  delete_data.py  derive_assessment_values.py  export_assessment_data.py  import_from_application.py  location_utils.py  populate_location_data.py
assessment_store/services/: data_services.py
assessment_store/tasks/: __init__.py  db_tasks.py
assessment_store/tests/: _db_seed_data.py  _helpers.py  conftest.py  test_assessment_mapping_fund_round.py  test_assessment_mapping_fund_round_cof.py  test_cof_import_mapper.py  test_db_allocation_associations.py  test_db_flags.py  test_db_function.py  test_db_scores.py  test_db_tag_associations.py  test_db_tags.py  test_import_applications.py  test_location_utils.py  test_qa_complete.py  (+3 more)
authenticator/: app.py  config.py  pyproject.toml
common/: blueprints.py  email_reminders.py  error_routes.py  tasks.py
frontend/: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  Dockerfile  filters.py  pyproject.toml
frontend/.github/workflows/: copilot_deploy.yml
frontend/apply/: helpers.py  routes.py
frontend/apply/default/: eligibility_routes.py  routes.py
frontend/apply/templates/apply/: accessibility_statement.html  base.html  contact_us.html  research_opt_in.html  tasklist.html
frontend/apply/templates/apply/all_questions/en/: cof25-eoi_r1_all_questions_en.html
frontend/apply/templates/apply/all_questions/uses_translations/: cof_r2_all_questions.html
frontend/assess/assessments/: helpers.py
frontend/assess/assessments/models/: applicants_response.py  file_factory.py  flag_teams.py  round_summary.py
frontend/assess/assessments/templates/assessments/: activity_trail.html  assessor_type.html  select_assessor.html
frontend/assess/authentication/: auth.py
frontend/assess/flagging/: helpers.py
frontend/assess/services/: data_services.py  shared_data_helpers.py
frontend/assess/shared/templates/shared/: index.html
frontend/assess/templates/assess/: get_help.html
frontend/assess/templates/assess/macros/: assessment_flag.html  scores_justification.html  team_dashboard_header.html
frontend/authenticator/frontend/default/: routes.py
frontend/authenticator/frontend/magic_links/: routes.py
frontend/authenticator/frontend/templates/authenticator/: 500.html  head.html
frontend/authenticator/frontend/templates/authenticator/magic_links/: signed_out.html
frontend/authenticator/frontend/templates/authenticator/sso/: sso_signed_out.html
frontend/authenticator/models/: account.py  magic_link.py
frontend/config/envs/: development.py  production.py  test.py  unit_test.py
frontend/copilot/fsd-pre-award-frontend/: manifest.yml
frontend/templates/: base.jinja.html  fs-cookies.html.jinja  page-template.jinja.html
frontend/templates/apply/: apply-base.html.jinja  apply-landing.html.jinja  landing-mono.html  landing-mono.html.jinja
frontend/tests/: conftest.py
frontend/tests/apply_tests/: test_eligibility_routes.py  test_fund_round_notification.py  test_lru_cache.py
frontend/tests/assess_tests/: route_testing_conf.py  test_applicators_response.py  test_round_status.py
frontend/tests/authenticator_tests/: test_healthchecks.py  test_signout.py
fund_store/: app.py  tasks.py
openapi/: api.yml
proto/: tasks.py
scripts/: aws_connect.sh  migration-task-script.py
tests/: conftest.py  test_debugtoolbar.py  test_healthcheck.py  test_routes.py
(+945 files in other folders)
