[project]
name = "funding-service-pre-award-stores"
version = "0.1.0"
description = "The Funding Service pre-award combined stores for the MHCLG."
readme = "README.md"
license = "MIT License"
requires-python = ">=3.10, <3.11"

dependencies = [
    "airium>=0.2.6",
    "apscheduler==3.10.4",
    "bs4>=0.0.2",
    "colored==2.2.4",
    "connexion[flask,flaskswagger-uiuvicorn,swagger-ui,uvicorn]==3.1.0",
    "flask-apscheduler==1.13.1",
    "flask-json==0.4.0",
    "flask-migrate==4.0.7",
    "flask-restx==1.3.0",
    "flask-sqlalchemy==3.1.1",
    "flask==3.0.3",
    "funding-service-design-utils==5.1.5",
    "invoke==2.2.0",
    "jsonpath-rw-ext==1.2.2",
    "marshmallow-sqlalchemy==1.0.0",
    "openapi-spec-validator==0.7.1",
    "openpyxl==3.1.5",
    "pandas==2.2.2",
    "prance==23.6.21.0",
    "psycopg2-binary==2.9.9",
    "python-dateutil==2.9.0.post0",
    "requests==2.32.3",
    "slugify==0.0.1",
    "sqlalchemy-json==0.7.0",
    "sqlalchemy-utils==0.41.2",
    "sqlalchemy[mypy]==2.0.36",
    "swagger-ui-bundle==1.1.0",
    "uvicorn==0.30.3",
]

[tool.ruff]
line-length = 120

target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "W",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C90",  # mccabe cyclomatic complexity
    "G",  # flake8-logging-format
]
ignore = []
exclude = [
    "db/migrations/versions/",
    "venv*",
    ".venv*",
    "__pycache__",
    "fund_store/config/fund_loader_config/FAB/"
]
mccabe.max-complexity = 12

[tool.uv]

[dependency-groups]
dev = [
    "asserts==0.13.1",
    "colored==2.2.4",
    "debugpy==1.8.8",
    "deepdiff==8.0.1",
    "invoke==2.2.0",
    "json2html==1.3.0",
    "pre-commit==4.0.1",
    "pytest==8.3.3",
    "pytest-env==1.1.5",
    "pytest-flask==1.3.0",
    "pytest-mock==3.14.0",
    "pytest-html>=3.2.0",
    "ruff==0.7.4",
    "click==8.1.7",
    "moto[s3,s3sqs,sqs]==5.0.10",
]
