[project]
name = "funding-service-pre-award-frontend"
version = "0.1.1"
description = "The funding service design frontend for the DLUHC."
authors = ["MHCLG", "Two Towers"]
license = "MIT License"

requires-python = "~=3.10.0"
dependencies = [
    "babel==2.16.0",
    "boto3==1.35.7",
    "cssmin==0.2.0",
    "email-validator==2.2.0",
    "flask-assets==2.1.0",
    "flask-babel==2.0.0",
    "flask-compress==1.15",
    "flask-redis==0.4.0",
    "flask-session==0.8.0",
    "flask-talisman==1.1.0",
    "flask-wtf==1.2.1",
    "flask==2.3.3",
    "funding-service-design-utils[toggles]==5.3.0",
    "govuk-frontend-jinja==2.7.0",
    "greenlet==3.1.1",
    "jsmin==3.0.1",
    "msal==1.28.0",
    "num2words==0.5.13",
    "pyjwt==2.8.0",
    "python-slugify==8.0.4",
    "requests==2.32.3",
    "swagger-ui-bundle==1.1.0",
    "xhtml2pdf==0.2.16",
]

[tool.djlint]
# run with : `djlint path/to/file.html --reformat --format-css --format-js`
#   this is deliberately commented out.  we don't want to format these tags as
#   it will introduce new lines and tabs, making the translation matching brittle.
# custom_blocks="trans,endtrans"
max_line_length=1000        # high limit, we don't want line breaks for translations.
max_attribute_length=1000   # ^^^
exclude=".venv,venv"
profile="jinja2"

[tool.ruff]
line-length = 120

target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "W",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C90",  # mccabe cyclomatic complexity
    "G",  # flake8-logging-format
]
ignore = []
exclude = [
    ".venv*",
    "__pycache__",
]
mccabe.max-complexity = 12

[tool.uv]

[dependency-groups]
dev = [
    "beautifulsoup4==4.12.3",
    "boto3==1.35.7",
    "debugpy==1.8.9",
    "deepdiff==8.0.0",
    "dparse==0.6.4",
    "invoke==2.2.0",
    "moto==5.0.12",
    "pre-commit==4.0.1",
    "pytest-env==1.1.3",
    "pytest-flask==1.3.0",
    "pytest-mock==3.14.0",
    "pytest==8.3.2",
    "requests-mock==1.11.0",
    "ruff==0.8.2",
]
